--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react-starter",
   "version": "0.1.0",
   "private": true,
+  "author": "William Grant <yougotwill94@gmail.com> (https://yougotwill@github.io)",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
