--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "author": "William Grant <yougotwill94@gmail.com> (https://yougotwill@github.io)",
   "dependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "^3.4.3"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
     "node-sass": "^4.14.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "^3.4.3"
+    "prettier": "2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
